# sshkube

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
charts/sshkube/: Chart.yaml  README.md  Values.yaml
charts/sshkube/templates/: deployment.yaml  traefik-ingress.yaml
server/: Dockerfile  entrypoint.sh
sshkube/: __main__.py  socat.py
test/: docker-compose.yaml
